# py-wick

./: .gitignore  Cargo.toml  README.md  setup.py
.github/workflows/: publish.yml  python-package.yml  rust.yml
examples/: test.py
py_wick/: __init__.py
src/: lib.rs
